--- a/app/Resources/views/messagerie.html.twig
+++ b/app/Resources/views/messagerie.html.twig
@@ -276,7 +276,7 @@
                                 {{ val[0].expediteur.firstname }} {{ val[0].expediteur.lastname }}
                             </td>
                             <td class="openMsgBtn" data-text="{{ val[0].dateCreation|localizeddate('none', 'none', null, null, 'YMMddhhmm' ) }}">
-                                {{ val[0].dateCreation|localizeddate('none', 'none', null, null, 'd LLLL Y à h:mm' ) }}
+                                {{ val[0].dateCreation|localizeddate('none', 'none', null, null, 'd LLLL Y à H:mm' ) }}
                             </td>
                             <td>
                                 <a class="btn btn-xs btn-danger deleteMsg">Supprimer</a>
