--- a/app/Resources/views/forum/sujet.html.twig
+++ b/app/Resources/views/forum/sujet.html.twig
@@ -3,7 +3,7 @@
 {% block pageHeader %}
     <div class="page-header">
         <div class="container">
-            <h2 class="color3">SUJET</h2>
+            <h2 class="color3">FORUM</h2>
             <ul class="breadcrumb">
                 <li class="color3">
                     <a href="{{ path('myCourses') }}" class="label label-info">{{ sujet.forum.cours.discipline.nom }}</a>
@@ -20,8 +20,41 @@
 {% endblock %}
 
 {% block main %}
+    <script src="{{ asset('vendors/jquery-ui/jquery-ui.min.js') }}" type=text/javascript></script>
+    <script src="{{ asset('educomp/ckeditor/ckeditor.js') }}"></script>
+    <script src="{{ asset('educomp/ckeditor/adapters/jquery.js') }}"></script>
+    {% include 'forum/commonJs.html.twig' %}
     <script>
         jQuery(document).ready(function () {
+            var sujetId = $('[data-sujetId]').attr('data-sujetId');
+
+            CKEDITOR.instances['sujetTexte'].on('change', function() {
+                $('.alertMustBeSet').removeClass('alertMustBeSet');
+            });
+
+            $('.btnSendPost').click(function(){
+                $('.alertMustBeSet').removeClass('alertMustBeSet');
+                var texte = description = CKEDITOR.instances['sujetTexte'].getData();
+                if(texte == ""){
+                    $('[for=sujetTexte]').addClass('alertMustBeSet');
+                }
+                if(!$('.alertMustBeSet').length){
+                    $.ajax({
+                        type: "POST",
+                        url: "{{path('forumNewPost_ajax')}}",
+                        data: {
+                            id: sujetId,
+                            texte: texte
+                        },
+                        dataType: "json",
+                        success: function (response) {
+                            window.location.href = window.location.href;
+                        }
+                    });
+                }
+            });
+
+
             $('.btnDeletePost').click(function() {
                 var postId = $(this).closest('[data-postId]').attr('data-postId');
                 $.ajax({
@@ -41,10 +74,8 @@
             });
         });
     </script>
-    <div class="container pt-40 pb-40">
-        {% if sujet.ouvert == 1 %}
-            <a href="{{ path('newForumPost', {id: sujet.id}) }}" class="btn btn-primary btn-sm"><i class="btnPostMsg fa fa-paper-plane-o" aria-hidden="true"></i></a>
-        {% endif %}
+    <div class="container pt-40 pb-40" data-sujetId="{{ sujet.id }}">
+
         <h3 class="heading text-center">Messages</h3>
         <div class="row">
             {% for key,val in posts %}
@@ -80,5 +111,30 @@
                 </div>
             {% endfor %}
         </div>
+
+        {% if sujet.ouvert == 1 %}
+            <div class="row mt-40">
+                <h5 class="heading text-center">Nouveau messages</h5>
+                <div class="col-sm-12">
+                    <div class="write-comment bockNewSujet">
+                        <form>
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <div class="form-group">
+                                        <textarea class="form-control simpleEditor" id="sujetTexte"></textarea>
+                                        <label for="sujetTexte">Message*</label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-12">
+                                    <div class="form-group text-center">
+                                        <a class="btn btn-primary btn-sm btnSendPost"><i class="btnSendMsg fa fa-paper-plane-o" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        {% endif %}
     </div>
 {% endblock %}
